add some introduction.

--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,11 @@
 <center>
-1234567890...
+<p>这是一个跨网站的评论系统
+<p>在任何网页（不局限于本站）上加入以下代码，就可以评论这个网页了。
+<p>&lt;iframe src="http://systemhost/comment.html"&gt;&lt;/iframe&gt;
+<p>你可以再看看<a href="/test.html">这个</a>
+<br><br>
 
-<br>
-
-<iframe width="50%" height="600px" src="http://localhost:3000/comment.html"></iframe>
+<iframe width="50%" height="600px" src="/comment.html"></iframe>
 
 
 </center>
